# tastytrade

./: .gitignore  Cargo.toml
cli/src/: main.rs
examples/accounts-status/src/: main.rs
examples/quote-streaming/src/: main.rs
forks/dxlink-0.1.5/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  README.md
forks/dxlink-0.1.5/examples/: README.md
forks/dxlink-0.1.5/src/: client.rs  connection.rs  error.rs  events.rs  lib.rs  messages.rs  utils.rs
forks/dxlink-0.1.5/tests/integration/: dxlink_extra.rs  dxlink_real.rs  dxlink_test.rs  mod.rs
src/: prelude.rs
src/api/: accounts.rs  base.rs  client.rs  market_data.rs  metrics.rs  mod.rs  option_chain.rs  quote_streaming.rs
src/streaming/: account_streaming.rs  quote_streamer.rs
src/types/: instrument.rs  login.rs  market_data.rs  metrics.rs  mod.rs  order.rs
src/utils/: config.rs  join.rs  logger.rs  mod.rs
