[package]
name = "tastytrade"
version = "0.2.2"
edition = "2024"
license = "MIT"
description = "Library for trading through tastytrade's API"
repository = "https://github.com/joaquinbejar/tastytrade"

include = [
    "benches/**/*",
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "examples/**/*.rs",
    "tests/**/*.rs",
    "Makefile",
    "rust-toolchain.toml",
    "Draws/**/*.png",
    "Docker/**/*.Dockerfile",
    "Docker/**/*.yml",
]

[dependencies]
derive_builder = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
rust_decimal = { workspace = true, features = [
    "serde-with-arbitrary-precision",
    "serde-with-float",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
flume = { workspace = true }
tokio-tungstenite = { workspace = true, features = ["native-tls"] }
tokio = { workspace = true, features = ["full"] }
futures-util = { workspace = true }
erased-serde = { workspace = true }
dxlink = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = { workspace = true }
pretty-simple-display = { workspace = true }

[dev-dependencies]
serial_test = "3.2"

[patch.crates-io]
dxlink = {path = "./forks/dxlink-0.1.5"}


[[test]]
name = "tests"
path = "tests/integration/mod.rs"

[workspace]
members = [
    "examples/accounts-status",
    "examples/quote-streaming",
    "cli",
    "examples/miscellaneous",
    "examples/instruments",
]

[workspace.dependencies]
tastytrade = { path = "." }
derive_builder = "0.20"
reqwest = { version = "0.12", features = ["json"] }
rust_decimal = { version = "1.37", features = [
    "serde-with-arbitrary-precision",
    "serde-with-float",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
flume = "0.11"
tokio-tungstenite = { version = "0.27", features = ["native-tls"] }
tokio = { version = "1.47", features = ["full"] }
futures-util = "0.3"
erased-serde = "0.4"
dxlink = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
pretty-simple-display = "0.1"
